--- a/style.css
+++ b/style.css
@@ -99,7 +99,13 @@ select#themeSelector {
     margin-top: 2rem;
 }
 
-
+.footer {
+    margin-top: 2rem;
+    font-size: 0.9rem;
+    color: var(--text);
+    text-align: center;
+    opacity: 0.7;
+}
 
 @media (max-width: 768px) {
 .container {
